tests/baselines/reference/ES5SymbolProperty3.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty3.ts(4,6): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
tests/cases/conformance/Symbols/ES5SymbolProperty3.ts(7,9): error TS2538: Type 'any' cannot be used as an index type.


==== tests/cases/conformance/Symbols/ES5SymbolProperty3.ts (2 errors) ====
    var Symbol: any;
    
    class C {
        [Symbol.iterator]() { }
         ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~~~~~~~~~~
!!! error TS2538: Type 'any' cannot be used as an index type.